    Better handling of embedded SSA/SSA subs styling
    Fixed audio track selection for MP4s and MOVs
    Optimized CBRVideoBitrate value for Panasonic TVs (thanks, ExSport!)
    Added RendererUniqueID to renderers' configs
    Added new renderer: Sony SMP-N100 (thanks, mrw1986 and guillepalao)
    Language updates:
        - Catalan translation update (thanks, aseques)

1.54.0 - 2012-06-25

    Added LPCM transcoding option for all audio tracks
    Added DTS HD-MA support up to 7.1 channels: DTS core remux, LPCM and AC3 transcoding
    Added Dolby TrueHD support up to 7.1 channels: LPCM (recommended) and AC3 (buggy for 7.1) transcoding
    Added workaround for 2.0 384 kbits AC3 PS3 audio bug
    Added support for DirecTV HR series (thanks, DeFlanko!)
    Added support for LG's Smart TV Upgrader (LG 600ST)
    Added support for Yamaha RX-V671 (thanks, adresd!)
    Added support for OPPO BDP-83 and OPPO BDP-93 (thanks, adresd!)
    Fixed bug that occurred when resetting cache
    Made buffer display in megabytes instead of bytes
    Fixed overscan compensation bug on some renderers (thanks to tMH for reporting the bug!)
    Updated MPlayer for OSX to SB32
    Language updates:
        - CZE translation update (thanks, valib)

1.53.0 - 2012-06-11

    Fix global custom MEncoder options
    Re-fix NPE when toggling HTTP Engine V2
    Fix startup for symlinked PMS.sh (#1356) (thanks, Matthijs!)
    Added documentation to PMS.conf (thanks, Hagar!)
    Updated JNA to support multiarch directories on Linux (#1152)
        - Fix test/startup error caused by conflicting JNA versions
    Language updates:
        - added Arabic
        - added Hebrew (thanks, zvi-yamin!)
        - CZE translation update (thanks, valib)
        - Layout support for right-to-left languages added
    Added option to select and force the default renderer
    Fixed Samsung 2012 TVs timeout (thanks, troop!)
    Added support for D-link DSM-510 (thanks, glenrocks!)