@@ -555,9 +555,9 @@ mencoder_decode =
 # -----------------------
 # GUI Option: Audio language priority (list)
 # A comma-separated list of language codes that defines the priority for
-# MEncoder when choosing audio languages, where "und" stands for "undefined".
-# For example: "eng,fre,jpn,ger,und". Default value is empty, which will let
-# PMS pick the priority.
+# MEncoder when choosing audio languages, where "loc" stands for the
+# preferred local language and "und" stands for "undefined".
+# Default value is "loc,eng,fre,jpn,ger,und".
 mencoder_audiolangs =
 
 # ---< Subtitle settings >----------------------------------------------------
@@ -566,9 +566,9 @@ mencoder_audiolangs =
 # --------------------------
 # GUI Option: Subtitle language priority (list)
 # A comma-separated list of language codes that defines the priority for
-# MEncoder when choosing subtitle languages, where "und" stands for
-# "undefined". For example: "eng,fre,jpn,ger,und". Default value is empty,
-# which will let PMS pick the priority.
+# MEncoder when choosing subtitle languages, where "loc" stands for the
+# preferred local language and "und" stands for "undefined". 
+# Default value is "loc,eng,fre,jpn,ger,und".
 mencoder_sublangs =
 
 # Force subtitle language
@@ -590,9 +590,10 @@ forced_sub_tags = forced
 # Determine the string of audio language and subtitle language pairs
 # ordered by priority for MEncoder to try to match. Audio language and
 # subtitle language should be comma separated as a pair; individual pairs
-# should be semicolon separated. "*" can be used to match any language.
-# Subtitle language can be defined as "off".
-# For example: "en,off;jpn,eng;*,eng;*;*". Default value is empty.
+# should be semicolon separated. "*" can be used to match any language,
+# "loc" to match the local language. Subtitle language can be defined as
+# "off".
+# Default value is "loc,off;jpn,loc;*,loc;*,*".
 mencoder_audiosublangs =
 
 # Subtitles codepage
