@@ -157,6 +157,9 @@ MEncoderVideo.122=cp949   /* Korean */
 MEncoderVideo.123=cp950   /* Big5, Taiwanese, Cantonese */
 MEncoderVideo.124=UTF-8   /* Unicode */
 MEncoderVideo.125=Choose Subtitles Color
+MEncoderVideo.126=loc,eng,fre,jpn,ger,und
+MEncoderVideo.127=loc,eng,fre,jpn,ger,und
+MEncoderVideo.128=loc,off;jpn,loc;*,loc;*,*
 NetworkTab.0=Language [needs application restart]:
 NetworkTab.1=Browse compressed archives (.rar/.zip/.cbr)
 NetworkTab.2=Generate thumbnails
