@@ -109,6 +109,9 @@ MEncoderVideo.89=\#Zum Entfernen des 24p-Ruckelns auf einem 50hz-TV:            
 MEncoderVideo.91=\#Zum Remuxen falls das Video MPEG-2 und ohne Untertitel ist:    vcodec == mpeg2 && srtfile == null :: -ovc copy -nosync
 MEncoderVideo.92=Qualit\u00e4t der DDVD-/VOB-Untertitel (0-4) (je gr\u00f6\u00dfer, desto besser)
 MEncoderVideo.93=F\u00fcge Rahmen hinzu um Overscan zu kompensieren:
+MEncoderVideo.126=loc,ger,jpn,eng,und
+MEncoderVideo.127=loc,ger,jpn,eng,und
+MEncoderVideo.128=loc,off;jpn,loc;*,loc;*,*
 NetworkTab.0=Sprache [erfordert Neustart von PMS]:
 NetworkTab.1=Archiv-Dateien durchsuchen (.rar/.zip/.cbr)
 NetworkTab.2=Miniaturansicht-Erstellung
