@@ -78,6 +78,9 @@ MEncoderVideo.35=Support am\u00e9lior\u00e9 du multicoeur
 MEncoderVideo.36=Utiliser le style ASS par d\u00e9faut
 MEncoderVideo.37=Dossier alternatif des sous titres
 MEncoderVideo.38=Remuxer uniquement lorsque la vid\u00e9o est compatible PS3 et qu'il n'y a pas de sous-titres [TS/M2T/MOV/MP4/AVI/MKV]
+MEncoderVideo.126=loc,fre,jpn,ger,eng,und
+MEncoderVideo.127=loc,fre,jpn,ger,eng,und
+MEncoderVideo.128=loc,off;jpn,loc;*,loc;*,*
 NetworkTab.0=Langue [red\u00e9marrage obligatoire]:
 NetworkTab.1=Parcourir les archives .RAR/.ZIP/.CBR
 NetworkTab.2=G\u00e9n\u00e9ration des vignettes
