@@ -114,6 +114,9 @@ MEncoderVideo.92=DVD/VOBsub subtitel kwaliteit (0-4) (hoger is beter):
 MEncoderVideo.93=Voeg randen toe ter compensatie van overscan:
 MEncoderVideo.94=Geforceerde sub:
 MEncoderVideo.95=Geforceerde tags:
+MEncoderVideo.126=loc,dut,jpn,eng,und
+MEncoderVideo.127=loc,dut,jpn,eng,und
+MEncoderVideo.128=loc,off;jpn,loc;*,loc;eng,off;*,eng;*,*
 NetworkTab.0=Taal [Opnieuw starten nodig]:
 NetworkTab.1=Doorzoek .RAR/.ZIP/.CBR bestanden
 NetworkTab.2=Thumbnails genereren
